fixed overflow so content scrolls

--- a/currentDraft/userStyle2.css
+++ b/currentDraft/userStyle2.css
@@ -4,7 +4,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
-    overflow-y: hidden;
+    overflow: scroll;
 }
 
 p {
@@ -28,6 +28,7 @@ a, a:hover, a:focus {
     padding: 2px 2px;
     margin-top: 30px;
     margin-left: 0px;
+    overflow-y: scroll;
 }
 
 
@@ -35,6 +36,7 @@ a, a:hover, a:focus {
     width: calc(100% - 210px);
     margin-top: -22px;
     margin-left: -12px;
+    overflow-y: scroll;
 
 }
 
@@ -249,15 +251,17 @@ a.article, a.article:hover {
     position: absolute;
     top: 0;
     right: 0;
-    overflow: hidden;
+    
 }
 
 #controlscreen{
     margin-left:30px
+    
 }
 
 #salescontent{
     width: calc(100% - 250px);
+    
 }
 
 #content.active {
@@ -267,6 +271,7 @@ a.article, a.article:hover {
 #formscreen{
     margin-top: 40px;
     left: 200px;
+    
     
 }
 #tablescreen{
